protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_file-8.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_file() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    File {
        span: 0..176,
        syntax: Proto3,
        syntax_span: Some(
            (
                0..18,
                Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
            ),
        ),
        package: None,
        imports: [],
        options: [],
        items: [
            Message(
                Message {
                    name: Ident {
                        value: "Foo",
                        span: 36..39,
                    },
                    body: MessageBody {
                        items: [
                            Field(
                                Field {
                                    label: None,
                                    name: Ident {
                                        value: "bar",
                                        span: 133..136,
                                    },
                                    kind: Normal {
                                        ty: Int32,
                                        ty_span: 127..132,
                                    },
                                    number: Int {
                                        negative: false,
                                        value: 1,
                                        span: 139..140,
                                    },
                                    options: None,
                                    comments: Comments {
                                        leading_detached_comments: [
                                            " detached\n",
                                        ],
                                        leading_comment: Some(
                                            " leading\n",
                                        ),
                                        trailing_comment: Some(
                                            " trailing2\n",
                                        ),
                                    },
                                    span: 127..141,
                                },
                            ),
                        ],
                        extensions: [],
                        options: [],
                        reserved: [],
                    },
                    comments: Comments {
                        leading_detached_comments: [],
                        leading_comment: None,
                        trailing_comment: Some(
                            " trailing\n",
                        ),
                    },
                    span: 28..176,
                },
            ),
        ],
    },
)
