protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_file.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_file() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    File {
        span: 0..0,
        syntax: Proto2,
        syntax_span: None,
        package: None,
        imports: [],
        options: [],
        items: [],
    },
)
