protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_group-5.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_field() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Field {
        label: Some(
            (
                Optional,
                0..8,
            ),
        ),
        name: Ident {
            value: "A",
            span: 15..16,
        },
        kind: Group {
            ty_span: 9..14,
            body: MessageBody {
                items: [
                    Field(
                        Field {
                            label: Some(
                                (
                                    Optional,
                                    23..31,
                                ),
                            ),
                            name: Ident {
                                value: "foo",
                                span: 39..42,
                            },
                            kind: Normal {
                                ty: Sint32,
                                ty_span: 32..38,
                            },
                            number: Int {
                                negative: false,
                                value: 2,
                                span: 45..46,
                            },
                            options: None,
                            comments: Comments {
                                leading_detached_comments: [],
                                leading_comment: None,
                                trailing_comment: None,
                            },
                            span: 23..47,
                        },
                    ),
                ],
                extensions: [],
                options: [],
                reserved: [],
            },
        },
        number: Int {
            negative: false,
            value: 1,
            span: 19..20,
        },
        options: None,
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..49,
    },
)
